tests/typescript/pos/objects/update-02.ts
/*@ foo ::  ({ x: number, *: string }) => { void | true } */ 
function foo(o) { 
    o.y = "aaa";
}
