tests/typescript/neg/objects/update-00.ts

/*@ foo :: ({ x: number }) => { void | true } */ 
function foo(o) {
  o.y = "aaa";
}
